# simple-ptt

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml  config.example.yaml  justfile  native.example.yaml  requirements.md
.github/: release.yml
.github/workflows/: ci.yml  release.yml
scripts/: build-macos-app.sh  build-macos-dmg.sh  clear-macos-permissions.sh  sync-app-and-reset.sh  sync-app.sh
src/: app.rs  audio.rs  auto_launch.rs  billing.rs  config.rs  deepgram_api.rs  deepgram_connection.rs  hotkey.rs  hotkey_binding.rs  hotkey_capture.rs  hotkey_macos.rs  icon.rs  main.rs  overlay.rs  permissions.rs  permissions_dialog.rs  settings.rs  settings_window.rs  state.rs  transcription.rs  transformation.rs  transformation_models.rs  ui_meter.rs
