[package]
name = "simple-ptt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple-ptt"
path = "src/main.rs"

[dependencies]
# macOS AppKit bindings (objc2 family)
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSData",
    "NSDictionary",
    "NSGeometry",
    "NSNotification",
    "NSString",
    "NSObject",
    "NSRange",
    "NSThread",
    "NSRunLoop",
    "NSDate",
    "NSTimer",
    "NSURL",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSBezierPath",
    "NSBitmapImageRep",
    "NSButton",
    "NSCell",
    "NSClipView",
    "NSColor",
    "NSControl",
    "NSEvent",
    "NSFont",
    "NSGraphics",
    "objc2-core-graphics",
    "objc2-quartz-core",
    "NSImage",
    "NSImageRep",
    "NSMenu",
    "NSMenuItem",
    "NSPanel",
    "NSParagraphStyle",
    "NSPasteboard",
    "NSResponder",
    "NSRunningApplication",
    "NSScreen",
    "NSScrollView",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSTextField",
    "NSView",
    "NSWindow",
    "NSWorkspace",
] }
objc2-quartz-core = { version = "0.3", features = ["objc2-core-foundation", "objc2-core-graphics"] }

# Global hotkey capture and synthetic paste shortcut on macOS
rdev = { version = "0.5", features = ["unstable_grab"] }

# Audio capture (CoreAudio on macOS)
cpal = "0.15"

# Deepgram streaming and management
bytes = "1"
deepgram = "0.9.2"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"
